# photo_share

./: .env.default  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
app/conf/: config.py
app/database/: comment.py  db.py  models.py  post.py  tag.py  user.py
app/middlewares/: middlewares.py
app/models/: __init__.py  comment.py  db.py  post.py  rating.py  tag.py  user.py
app/repository/: admin.py  comments.py  comments_crud.py  posts.py  ratings.py  tags.py  users.py
app/routes/: admin.py  auth.py  comments.py  home.py  posts.py  qrcode.py  rating.py  static.py  tags.py  users.py
app/schemas/: comments.py  post.py  tags.py  user.py
app/services/: auth.py  cloudinary.py  email.py  gravatar.py  qrcode_gen.py  rating.py  role_checker.py
app/services/templates/: email_reset_passwd_template.html  email_template.html
docs/source/: conf.py  index.rst
front/routes/: home.py
front/static/css/: posts.css  posts_v1.css  styles.css
front/static/css/auth/: signin.css
front/static/css/partials/: post_detail_add_comments.css  post_id.css
front/static/js/: base copy.js  base.js
front/static/js/auth/: signin.js  signup.js
front/static/js/posts/: create_post.js  create_post__.js  (+1 more)
front/templates/: base.html  header.html  home.html  index.html  post_create.html  post_id copy.html  post_id.html  posts.html  posts_my.html  test.html
front/templates/auth/: logout.html  new_password.html  resend_activation.html  reset_password.html  send_reset_password.html  signin.html  signup.html
front/templates/partials/: post_card.html  post_card_v1.html  post_create_form.html  post_detail.html  post_detail_add_comments.html  post_detail_comments.html  post_service_btn.html
frontend/templates/: base.html  header.html  posts.html
frontend/templates/auth/: signin.html
migrations/: env.py
migrations/versions/: 0346430d2729_add_banned_field.py  31040df15e67_models.py  3b72015db923_create_user_model.py  72d0eff0c791_rating_table.py  74794134f2d7_models.py  8abff47f0785_add_role_to_user.py  d5d76287859d_users_migration.py  d6a0d78dc4cc_init.py  d7c65570313b_new_models.py  e03cf94e1121_fix_relationship_post_model.py  ed764b44a4ac_updated_at_default_change_to_none.py  eecf2f224017_new_models.py  f7c950df3777_rating_posts.py
tests/: conftest.py
tests/repository/: test_reposetory_tags.py  test_repository_admin.py  test_repository_comments.py  test_repository_post.py  test_repository_tags.py  test_repository_users.py
tests/routes/: test_routes_auth.py  test_routes_comments.py  test_routes_posts.py  test_routes_tags.py
tests/services/: test_cloudinary.py  test_qrcode_gen.py  test_services_cloudinary.py  test_services_email.py  test_services_qrcode_gen.py  test_services_rating.py  test_services_role_checker.py
