[tool.poetry]
name = "photo-share"
version = "0.1.0"
description = ""
authors = [
    "Nazar Salo <peakodev@gmail.com>",
    "Aleksandr Kadulin <kadulin@gmail.com>",
    "Orest Lavrynets <lav.orest@gmail.com>",
    "Sergey Zhukov <serhii.zhukov@ukr.net>",
    "Олег Новосад <krom4rd@gmail.com>" 
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.3"
psycopg2-binary = "^2.9.9"

[tool.poetry.scripts]
start = "uvicorn main:app --host localhost --port 8008 --reload"
cleanup = "sh bin/cleanup.sh" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
