[tool.poetry]
name = "photo-share"
version = "0.1.0"
description = ""
authors = [
    "Nazar Salo <peakodev@gmail.com>",
    "Aleksandr Kadulin <kadulin@gmail.com>",
    "Orest Lavrynets <lav.orest@gmail.com>",
    "Sergey Zhukov <serhii.zhukov@ukr.net>",
    "Олег Новосад <krom4rd@gmail.com>" 
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.3"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
passlib = "^1.7.4"
libgravatar = "^1.0.4"
redis = "^5.0.6"
fastapi-mail = "^1.4.1"
python-jose = "^3.3.0"
bcrypt = "^4.1.3"
cloudinary = "^1.40.0"
asyncpg = "^0.29.0"

[tool.poetry.scripts]
start = "uvicorn main:app --host localhost --port 8008 --reload"
cleanup = "sh bin/cleanup.sh" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
