[tool.poetry]
name = "photo-share"
version = "0.1.0"
description = ""
authors = [
    "Nazar Salo <peakodev@gmail.com>",
    "Aleksandr Kadulin <kadulin@gmail.com>",
    "Orest Lavrynets <lav.orest@gmail.com>",
    "Sergey Zhukov <serhii.zhukov@ukr.net>",
    "Oleh Novosad <krom4rd@gmail.com>"
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.3"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
passlib = "^1.7.4"
libgravatar = "^1.0.4"
redis = "^5.0.6"
fastapi-mail = "^1.4.1"
python-jose = "^3.3.0"
bcrypt = "^4.1.3"
cloudinary = "^1.40.0"
qrcode = "^7.4.2"
asyncio = "^3.4.3"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
jinja2 = "^3.1.4"
requests = "^2.32.3"
sphinx = "^7.3.7"
allure-pytest = "^2.13.5"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
start = "uvicorn main:app --host localhost --port 8008 --reload"
cleanup = "sh bin/cleanup.sh" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]